<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/AddTask"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditTask">


    <TextView
        android:id="@+id/taskLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="24dp"
        android:text="@string/Task"
        android:textColor="@color/black"
        android:textSize="24sp"

        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/editName"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/noteLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="24dp"
        android:text="@string/note"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/editNote"
        app:layout_constraintTop_toBottomOf="@+id/taskLabel" />

    <TextView
        android:id="@+id/dateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="24dp"
        android:text="@string/date"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/datePickerButton"
        app:layout_constraintTop_toBottomOf="@+id/noteLabel" />

    <TextView
        android:id="@+id/timeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="24dp"
        android:text="@string/time"
        android:textColor="@color/black"
        android:textSize="24sp"

        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/timePickerButton"
        app:layout_constraintTop_toBottomOf="@+id/dateLabel" />

    <Button
        android:id="@+id/datePickerButton"
        android:layout_width="208dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:backgroundTint="@color/design_default_color_background"
        android:onClick="openDatePicker"
        android:text="@string/year_format"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editNote" />

    <Button
        android:id="@+id/timePickerButton"
        android:layout_width="208dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:backgroundTint="@color/design_default_color_background"
        android:onClick="openTimePicker"
        android:text="@string/time_format"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/datePickerButton" />

    <EditText
        android:id="@+id/editName"
        android:layout_width="208dp"
        android:layout_height="56dp"
        android:layout_marginTop="48dp"
        android:autofillHints="@string/name"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editNote"
        android:layout_width="208dp"
        android:layout_height="50dp"
        android:layout_marginTop="48dp"
        android:autofillHints="@string/note"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/note"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editName" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:onClick="saveTask"

        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editComplete" />

    <CheckBox
        android:id="@+id/editComplete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:onClick="markComplete"
        android:text="@string/complete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timePickerButton" />

</androidx.constraintlayout.widget.ConstraintLayout>